<resources>
    <string name="app_name">RU Cafe</string>
    <string name="TestHint">Testing</string>
    <string name="donut_activity_prompt">Select Donuts to Add To Your Cart</string>
    <string name="sandwich_activity_prompt">Customize Your Sandwich</string>
    <string name="donut_activity_spinner_prompt">Select Donut Type</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="tall">tall</string>
    <string name="shortcoffee">short</string>
    <string name="venti">venti</string>
    <string name="grande">grande</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="main_act_donut_btn">Donuts</string>
    <string name="main_act_coffee_btn">Coffee</string>
    <string name="main_act_sandwich_btn">Sandwich</string>
    <string name="main_act_current_order_btn">Current Order</string>
    <string name="main_act_all_orders_btn">All Orders</string>
    <string name="add_to_order">Add to Order</string>
    <string name="main_page_prompt">Main Menu</string>
    <string name="cheese">cheese</string>
    <string name="lettuce">lettuce</string>
    <string name="tomatoes">tomatoes</string>
    <string name="onions">onions</string>
    <string name="add_ons">~ Add Ons ~</string>
    <string name="bread">~ Bread ~</string>
    <string name="protein">~ Protein ~</string>
    <string name="total_price">Total Price:</string>
    <string name="remove">Remove</string>
    <string name="place_order">place_order</string>
    <string name="place_order1">Place Order</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="total">Total</string>
    <string name="total1">Total:</string>
    <string name="tax">Tax:</string>
    <string name="export">Export Orders</string>
</resources>