<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="408dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:inputType="none"
        android:text="@string/main_page_prompt"
        android:textAlignment="center"
        android:textColor="@color/rutgers_scarlet"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="132dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ru_cafe"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="362dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout">
        <Button android:id="@+id/coffeeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:onClick="showCoffee"
            android:text="@string/main_act_coffee_btn"/>
        <Button
            android:id="@+id/donutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:onClick="showDonut"
            android:text="@string/main_act_donut_btn"/>
        <Button
            android:id="@+id/sandwichButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:onClick="showSandwich"
            android:text="@string/main_act_sandwich_btn"/>
        <Button
            android:id="@+id/currentOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:onClick="showCurrentOrder"
            android:text="@string/main_act_current_order_btn"/>
        <Button
            android:id="@+id/allOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showAllOrders"
            android:text="@string/main_act_all_orders_btn"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>