<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="order"
                type="entities.Order" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentOrder">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrder"
            android:layout_width="410dp"
            android:layout_height="468dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/b_placeOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="placeOrder"
            android:text="@string/place_order1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.951"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="260dp"
            android:layout_height="183dp"
            android:layout_marginTop="484dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="252dp"
                android:layout_height="54dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tax" />

            <EditText
                    android:id="@+id/et_salesTax"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number"
                    android:text="@={order.salesTaxBind}" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="252dp"
                android:layout_height="54dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/total1" />

            <EditText
                    android:id="@+id/et_total"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number"
                    android:text="@={order.totalBind}" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="252dp"
                android:layout_height="54dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/sub_total" />

            <EditText
                    android:id="@+id/et_subTotal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number"
                    android:text="@={order.subTotalBind}" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>